feat(ds): add missing return type to openapi generated spec
